location icon alignment has been fixed

--- a/src/components/Intro/intro.scss
+++ b/src/components/Intro/intro.scss
@@ -10,7 +10,7 @@
 .intro__text {
     display: flex;
     &--wrapper {
-        max-width: 670px !important;
+        max-width: 650px !important;
 
     }
     &--btn {
